--- a/FacturaElectronicaGS/FacturaElectronicaGS.xaml
+++ b/FacturaElectronicaGS/FacturaElectronicaGS.xaml
@@ -6,84 +6,107 @@
              xmlns:SiaSf="http://schemas.syncfusion.com/wpf"
              xmlns:local="clr-namespace:SiasoftAppExt"
              Width="600" Height="450" Loaded="Window_Loaded">
+    
+    <Window.Resources>
+        <SolidColorBrush Color="Black" x:Key="ColorMain"/>
+        <SolidColorBrush Color="#373737" x:Key="ColorButton"/>
+        <Style TargetType="Button" x:Key="BtnStyle">
+            <Setter Property="Background" Value="{StaticResource ColorButton}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource ColorButton}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Width" Value="120"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0" Background="#03A9F4">
-            <TextBlock Text="FACTURACION ELECTRONICA" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" FontSize="15"/>
-        </Grid>
-
-
-        <Grid Grid.Row="1" >
+        <SiaSf:SfBusyIndicator Name="sfBusyIndicatorEstado" Margin="5" VerticalAlignment="Center" FontSize="14" AnimationSpeed="100"  AnimationType="Gear" Header="Enviando ......." Height="100" IsBusy="False" Panel.ZIndex="1" Grid.Row="1"/>
+        <Grid Name="GridMain">
             <Grid.RowDefinitions>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="73*"/>
-                <ColumnDefinition Width="223*"/>
-            </Grid.ColumnDefinitions>
-            
 
-            <TextBlock Text="Nit /CC:" Grid.Column="0" HorizontalAlignment="Right" FontSize="12" VerticalAlignment="Center" Height="16" Margin="0,5,14,5" Width="39"/>
-            <TextBlock Text="Digito Verificacion:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" FontSize="12" VerticalAlignment="Center" Height="16" Margin="0,5,5,5" />
-            <TextBlock Text="Nombre" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,12,0" />
-            <TextBlock Text="FechaHora" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,11,0" />
-            <TextBlock Text="Email" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,11,0" />
-            <TextBlock Text="No.Documento" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"  />
-            <TextBlock Text="Ciudad" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"/>
-            <TextBlock Text="Direccion" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"/>
-                       
-            
-            
-            <TextBlock Text="Resultado" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"  />
+            <Grid Grid.Row="0" Background="#03A9F4">
+                <TextBlock Text="FACTURACION ELECTRONICA" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" FontSize="15"/>
+            </Grid>
 
-            <StackPanel Grid.Column="1" Orientation="Horizontal">
-                <TextBox x:Name="tbxnit" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="True" IsReadOnly="False" Width="200"/>
-                <TextBox x:Name="tbxnitReal" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="False" IsReadOnly="True" Background="WhiteSmoke" Width="150"/>
-                <Button Name="BtnTerceros" ToolTip="Maestra de terceros" Content="..." Margin="2" Width="30" Background="#373737" Foreground="White" BorderBrush="{x:Null}" Click="BtnTerceros_Click"/>
-            </StackPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-                <TextBox x:Name="tbxDV" HorizontalContentAlignment="Left" Margin="5,1,5,0" Focusable="True" IsReadOnly="False" Width="150"/>
-                <TextBox x:Name="tbxTdoc" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="False" IsReadOnly="True" Background="WhiteSmoke" Width="150"/>
-            </StackPanel>
-            
-            
-            
-            <TextBox x:Name="tbxnombre" HorizontalContentAlignment="Left" Grid.Row="2" Margin="5,1,5,1" Grid.Column="1" Focusable="False" IsReadOnly="True" Background="WhiteSmoke"/>
-            <TextBox x:Name="tbxFechaEmision" HorizontalContentAlignment="Left" Grid.Row="3" Margin="5,1,5,1" Grid.Column="1" Focusable="False" IsReadOnly="False" Background="WhiteSmoke"/>
-            <TextBox x:Name="tbxEmail" HorizontalContentAlignment="Left" Grid.Row="4" Margin="5,1,5,1" Grid.Column="1"  Focusable="True" IsReadOnly="False" />
-            <TextBox x:Name="txtNumFactura" HorizontalContentAlignment="Left" Grid.Row="5" Margin="5,1,5,1" Grid.Column="1" IsReadOnly="True" Background="WhiteSmoke"/>
+            <Grid Grid.Row="1" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="73*"/>
+                    <ColumnDefinition Width="223*"/>
+                </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
-                <TextBox x:Name="txtNumCiudad" HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" Width="250"/>
-                <TextBox x:Name="txtNumCodeCiudad" HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" Width="50"/>
-            </StackPanel>
 
-            <TextBox Grid.Row="7" Grid.Column="1" x:Name="txtDireccion"  HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" />
+                <TextBlock Text="Nit /CC:" Grid.Column="0" HorizontalAlignment="Right" FontSize="12" VerticalAlignment="Center" Height="16" Margin="0,5,14,5" Width="39"/>
+                <TextBlock Text="Digito Verificacion:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" FontSize="12" VerticalAlignment="Center" Height="16" Margin="0,5,5,5" />
+                <TextBlock Text="Nombre" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,12,0" />
+                <TextBlock Text="FechaHora" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,11,0" />
+                <TextBlock Text="Email" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,11,0" />
+                <TextBlock Text="No.Documento" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"  />
+                <TextBlock Text="Ciudad" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"/>
+                <TextBlock Text="Direccion" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"/>
 
-            <TextBox x:Name="rtxInformacion" HorizontalContentAlignment="Left" Grid.Row="8" FontSize="11" Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="1" IsReadOnly="True" TextWrapping="Wrap" Background="WhiteSmoke"/>
+
+
+                <TextBlock Text="Resultado" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Right" FontSize="15" Margin="0,0,13,0"  />
+
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <TextBox x:Name="tbxnit" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="True" IsReadOnly="False" Width="200"/>
+                    <TextBox x:Name="tbxnitReal" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="False" IsReadOnly="True" Background="WhiteSmoke" Width="150"/>
+                    <Button Name="BtnTerceros" ToolTip="Maestra de terceros" Content="..." Margin="2" Width="30" Background="#373737" Foreground="White" BorderBrush="{x:Null}" Click="BtnTerceros_Click"/>
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                    <TextBox x:Name="tbxDV" HorizontalContentAlignment="Left" Margin="5,1,5,0" Focusable="True" IsReadOnly="False" Width="150"/>
+                    <TextBox x:Name="tbxTdoc" HorizontalContentAlignment="Left" Margin="5,1,5,0"  Focusable="False" IsReadOnly="True" Background="WhiteSmoke" Width="150"/>
+                </StackPanel>
+
+
+
+                <TextBox x:Name="tbxnombre" HorizontalContentAlignment="Left" Grid.Row="2" Margin="5,1,5,1" Grid.Column="1" Focusable="False" IsReadOnly="True" Background="WhiteSmoke"/>
+                <TextBox x:Name="tbxFechaEmision" HorizontalContentAlignment="Left" Grid.Row="3" Margin="5,1,5,1" Grid.Column="1" Focusable="False" IsReadOnly="False" Background="WhiteSmoke"/>
+                <TextBox x:Name="tbxEmail" HorizontalContentAlignment="Left" Grid.Row="4" Margin="5,1,5,1" Grid.Column="1"  Focusable="True" IsReadOnly="False" />
+                <TextBox x:Name="txtNumFactura" HorizontalContentAlignment="Left" Grid.Row="5" Margin="5,1,5,1" Grid.Column="1" IsReadOnly="True" Background="WhiteSmoke"/>
+
+                <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
+                    <TextBox x:Name="txtNumCiudad" HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" Width="250"/>
+                    <TextBox x:Name="txtNumCodeCiudad" HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" Width="50"/>
+                </StackPanel>
+
+                <TextBox Grid.Row="7" Grid.Column="1" x:Name="txtDireccion"  HorizontalContentAlignment="Left"  Margin="5,1,5,1" IsReadOnly="True" Background="WhiteSmoke" />
+
+                <TextBox x:Name="rtxInformacion" HorizontalContentAlignment="Left" Grid.Row="8" FontSize="11" Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="1" IsReadOnly="True" TextWrapping="Wrap" Background="WhiteSmoke"/>
+
+
+            </Grid>
+
+
+            <Grid Grid.Row="2" Background="#03A9F4"  Grid.RowSpan="2">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Button x:Name="BtnEnviar" Content="ENVIAR" Click="BtnEnviar_Click" Style="{StaticResource BtnStyle}"/>
+                    <Button x:Name="BtnImprimir" Content="IMPRIMIR" Click="BtnImprimir_Click" Style="{StaticResource BtnStyle}"/>
+                    <Button x:Name="BtnRecargar" Content="RECARGAR INFO" Click="BtnRecargar_Click" Style="{StaticResource BtnStyle}"/>
+                    <Button x:Name="BtnRenviarPdf" Content="REENVIAR ADJ" ToolTip="Volver a enviar" Click="BtnRenviarPdf_Click" Style="{StaticResource BtnStyle}"/>
+                </StackPanel>
+            </Grid>
 
         </Grid>
-        <Grid Grid.Row="2" Background="#03A9F4"  Grid.RowSpan="2">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Button x:Name="BtnEnviar" Width="150" Content="ENVIAR" FontSize="12" Grid.Column="0" Click="BtnEnviar_Click" Grid.ColumnSpan="2" Padding="5" Margin="2" Visibility="Visible" Background="#373737" Foreground="White" BorderBrush="{x:Null}"/>
-                <Button x:Name="BtnImprimir" Width="150" Content="IMPRIMIR" FontSize="12" Grid.Column="0" Click="BtnImprimir_Click"  Grid.ColumnSpan="2" Padding="5" Margin="2" Background="#373737" Foreground="White" BorderBrush="{x:Null}"/>
-                <Button x:Name="BtnRecargar" Width="150" Content="RECARGAR INFO" FontSize="12" Grid.Column="0" Click="BtnRecargar_Click"  Grid.ColumnSpan="2" Padding="5" Margin="2" Background="#373737" Foreground="White" BorderBrush="{x:Null}"/>
-            </StackPanel>
-        </Grid>
-
     </Grid>
+    
 </Window>
